--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,24 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="dispaly-4 text-success">It works!</h1>
+    <div class="container-fluid text-center">
+        <div class="row">
+            <div class="col-12">
+                <h1>Yommies</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6">
+                <h3 class="text-right">Pick 'N' Mix</h3>
+            </div>
+            <div class="col-lg-6">
+                <h3 class="text-left">Made easy...</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <a class="btn btn-lg" href="">Build</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
