--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <a class="btn btn-lg" href="">Build</a>
+                <a class="btn btn-lg bg-primary" href="">Build</a>
             </div>
         </div>
     </div>
