--- a/templates/base.html
+++ b/templates/base.html
@@ -55,24 +55,33 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-shopping-bag"></i></a>
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
+                            <div class="text-center">
+                                <i class="fas fa-shopping-bag fa-lg"></i>
+                                <p class="d-inline">
+                                    {% if grand_total %}
+                                        £{{ grand_total|floatformat:2 }}
+                                    {% else %}
+                                        £0.00
+                                    {% endif %}
+                                </p>
+                            </div>
+                        </a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-user"></i>
+                            <i class="fas fa-user fa-lg"></i>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown2">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Product Management</a>
-                                    </li>
+                                        <a class="dropdown-item" href="#">Product Management</a>
                                 {% endif %}
                                 <a class="dropdown-item" href="#">My Profile</a>
-                                <a class="dropdown-item" href="#">Logout</a>
+                                <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                             {% else %}
-                                <a class="dropdown-item" href="#">Register</a>
-                                <a class="dropdown-item" href="#">Login</a>
+                                <a class="dropdown-item" href="{% url 'account_signup' %}">Register</a>
+                                <a class="dropdown-item" href="{% url 'account_login' %}">Login</a>
                             {% endif %}
                         </div>
                     </li>
