--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,10 +2,10 @@
 {% load static %}
 
 {% block content %}
-    <div class="container-fluid text-center">
+    <div class="container-fluid landing-page text-center">
         <div class="row">
             <div class="col-12">
-                <h1>Yommies</h1>
+                <h1 class="sniglet-header">Yommies</h1>
             </div>
         </div>
         <div class="row">
@@ -13,7 +13,7 @@
                 <h3 class="text-right">Pick 'N' Mix</h3>
             </div>
             <div class="col-lg-6">
-                <h3 class="text-left">Made easy...</h3>
+                <h4 class="text-left">Made easy...</h4>
             </div>
         </div>
         <div class="row">
