Some styling to index.html and changed sniglet font to cabin sketch

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,21 +5,24 @@
     <div class="container-fluid landing-page text-center">
         <div class="row">
             <div class="col-12">
-                <h1 class="sniglet-header">Yommies</h1>
+                <h1 class="cabinsketch-header display-1 py-2">Yommies</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-6">
-                <h3 class="text-right">Pick 'N' Mix</h3>
+                <h4 class="text-right font-weight-light py-3">Pick 'N' Mix</h4>
             </div>
             <div class="col-lg-6">
-                <h4 class="text-left">Made easy...</h4>
+                <h4 class="text-left font-weight-light py-3">Made easy...</h4>
             </div>
         </div>
         <div class="row">
             <div class="col-12">
-                <a class="btn btn-lg bg-primary" href="">Build</a>
+                <a class="btn btn-lg build-btn" href="">Build</a>
             </div>
         </div>
+    </div>
+    <div class="container-fluid">
+        <h1 class="text-center font-weight-light">Welcome to <span class="cabinsketch-header display-3">Yommies!</span></h1>
     </div>
 {% endblock %}
