--- a/templates/base.html
+++ b/templates/base.html
@@ -36,18 +36,18 @@
   <body>
     <header class="fixed-top">
         <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand sniglet-header" href="#">Yommies</a>
+            <a class="navbar-brand cabinsketch-header" href="#">Yommies</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars drop-down-menu"></i>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse font-weight-light" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Sweets
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                        <div class="dropdown-menu font-weight-light" aria-labelledby="navbarDropdown1">
                             <a class="dropdown-item" href="#">Build</a>
                             <a class="dropdown-item" href="#">Bags</a>
                         </div>
