uploaded sweet icons and styled home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,21 +4,28 @@
 {% block content %}
     <div class="container-fluid landing-page text-center">
         <div class="row">
-            <div class="col-12">
-                <h1 class="cabinsketch-header display-1 py-2">Yommies</h1>
+            <div class="col-lg-3 d-none d-lg-block">
+                <img class="img-medium" src="{% static 'sweeticons/045-gummy.png' %}" alt="">
             </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6">
-                <h4 class="text-right font-weight-light py-3">Pick 'N' Mix</h4>
+            <div class="col-lg-6 col-md-12">
+                <h1 class="cabinsketch-header py-2 big-font">Yommies</h1>
             </div>
-            <div class="col-lg-6">
-                <h4 class="text-left font-weight-light py-3">Made easy...</h4>
+            <div class="col-lg-3 d-none d-lg-block">
+                <img class="img-medium ml-auto" src="{% static 'sweeticons/036-jellybeans.png' %}" alt="">
             </div>
         </div>
         <div class="row">
             <div class="col-12">
+                <h4 class="text-center font-weight-light py-3">Pick 'N' Mix</h4>
                 <a class="btn btn-lg build-btn" href="">Build</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <img class="img-medium" src="{% static 'sweeticons/008-candy.png' %}" alt="">
+            </div>
+            <div class="col-6">
+                <img class="img-medium" src="{% static 'sweeticons/049-lollipop.png' %}" alt="">
             </div>
         </div>
     </div>
