--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block content %}
-    <div class="container-fluid landing-page text-center">
+    <!-- Landing page section -->
+    <div class="container-fluid view-height-100 container-padding text-center">
         <div class="row">
             <div class="col-lg-3 d-none d-lg-block">
                 <img class="img-medium" src="{% static 'sweeticons/045-gummy.png' %}" alt="">
@@ -11,7 +12,7 @@
                 <h1 class="cabinsketch-header py-2 big-font">Yommies</h1>
             </div>
             <div class="col-lg-3 d-none d-lg-block">
-                <img class="img-medium ml-auto" src="{% static 'sweeticons/036-jellybeans.png' %}" alt="">
+                <img class="img-medium" src="{% static 'sweeticons/036-jellybeans.png' %}" alt="">
             </div>
         </div>
         <div class="row">
@@ -29,7 +30,32 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <h1 class="text-center font-weight-light">Welcome to <span class="cabinsketch-header display-3">Yommies!</span></h1>
+    <!-- End of landing page section -->
+    
+    <!-- Welcome / info section -->
+    <div class="container-fluid container-padding bg-color-almond">
+        <div class="row py-5">
+            <div class="col-12">
+                <h1 class="text-center font-weight-light d-inline my-auto">Welcome to <span class="cabinsketch-header display-3">Yommies!</span></h1>
+                <img class="img-small float-right" src="{% static 'sweeticons/032-candy.png' %}" alt="smiling purple boiled sweet in clear wrapper">
+            </div>
+        </div>
+        <div class="row py-5">
+            <div class="col-5">
+                <img class="img-medium" src="{% static 'sweeticons/020-marshmallow.png' %}" alt="">
+            </div>
+            <div class="col-7">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia placeat fugit suscipit delectus quasi, ex perspiciatis fugiat voluptas ipsum quidem quaerat fuga consequuntur, neque pariatur soluta dolor magni. Modi, quae.</p>
+            </div>
+        </div>
+        <div class="row py-5">
+            <div class="col-7">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia placeat fugit suscipit delectus quasi, ex perspiciatis fugiat voluptas ipsum quidem quaerat fuga consequuntur, neque pariatur soluta dolor magni. Modi, quae.</p>
+            </div>
+            <div class="col-5">
+                <img class="img-medium float-right" src="{% static 'sweeticons/048-breadroll.png' %}" alt="">
+            </div>
+        </div>
     </div>
+    <!-- End of welcome / info section -->
 {% endblock %}
