Added more structure and placeholder content to info section and some responsive styling

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
                 <img class="img-medium" src="{% static 'sweeticons/045-gummy.png' %}" alt="">
             </div>
             <div class="col-lg-6 col-md-12">
-                <h1 class="cabinsketch-header py-2 big-font">Yommies</h1>
+                <h1 class="cabinsketch-header pt-5 pb-2 big-font">Yommies</h1>
             </div>
             <div class="col-lg-3 d-none d-lg-block">
                 <img class="img-medium" src="{% static 'sweeticons/036-jellybeans.png' %}" alt="">
@@ -23,21 +23,21 @@
         </div>
         <div class="row">
             <div class="col-6">
-                <img class="img-medium" src="{% static 'sweeticons/008-candy.png' %}" alt="">
+                <img class="img-medium pt-4" src="{% static 'sweeticons/008-candy.png' %}" alt="">
             </div>
             <div class="col-6">
-                <img class="img-medium" src="{% static 'sweeticons/049-lollipop.png' %}" alt="">
+                <img class="img-medium pt-4" src="{% static 'sweeticons/049-lollipop.png' %}" alt="">
             </div>
         </div>
     </div>
     <!-- End of landing page section -->
-    
+
     <!-- Welcome / info section -->
     <div class="container-fluid container-padding bg-color-almond">
         <div class="row py-5">
             <div class="col-12">
-                <h1 class="text-center font-weight-light d-inline my-auto">Welcome to <span class="cabinsketch-header display-3">Yommies!</span></h1>
-                <img class="img-small float-right" src="{% static 'sweeticons/032-candy.png' %}" alt="smiling purple boiled sweet in clear wrapper">
+                <h2 class="text-center font-weight-light d-inline my-auto">Welcome to <span class="cabinsketch-header medium-font">Yommies!</span></h2>
+                <img class="img-small float-right d-none d-lg-inline" src="{% static 'sweeticons/032-candy.png' %}" alt="smiling purple boiled sweet in clear wrapper">
             </div>
         </div>
         <div class="row py-5">
@@ -54,6 +54,20 @@
             </div>
             <div class="col-5">
                 <img class="img-medium float-right" src="{% static 'sweeticons/048-breadroll.png' %}" alt="">
+            </div>
+        </div>
+        <div class="row py-5">
+            <div class="col-sm-4 text-center py-3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sequi provident ab iste ducimus illo mollitia.</p>
+                    <img class="img-medium pt-3" src="{% static 'sweeticons/019-chocbar.png' %}" alt="">
+            </div>
+            <div class="col-sm-4 text-center py-3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sequi provident ab iste ducimus illo mollitia.</p>
+                    <img class="img-medium pt-3" src="{% static 'sweeticons/017-lollipop.png' %}" alt="">
+            </div>
+            <div class="col-sm-4 text-center py-3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sequi provident ab iste ducimus illo mollitia.</p>
+                    <img class="img-medium pt-3" src="{% static 'sweeticons/024-macaron.png' %}" alt="">
             </div>
         </div>
     </div>
