Added some responsive margin to landing page for smaller screens

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,8 +3,8 @@
 
 {% block content %}
     <!-- Landing page section -->
-    <div class="container-fluid view-height-100 container-padding text-center">
-        <div class="row">
+    <div class="container-fluid view-height-100 container-padding text-center mt-5 mt-lg-0">
+        <div class="row mt-5 mt-lg-0">
             <div class="col-lg-3 d-none d-lg-block">
                 <img class="img-medium" src="{% static 'sweeticons/045-gummy.png' %}" alt="">
             </div>
