Added bottom row with shop now button

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,7 @@
 {% block content %}
     <!-- Landing page section -->
     <div class="container-fluid view-height-100 container-padding text-center mt-5 mt-lg-0">
-        <div class="row mt-5 mt-lg-0">
+        <div class="row pt-5 pt-lg-0">
             <div class="col-lg-3 d-none d-lg-block">
                 <img class="img-medium" src="{% static 'sweeticons/045-gummy.png' %}" alt="">
             </div>
@@ -68,6 +68,13 @@
             <div class="col-sm-4 text-center py-3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sequi provident ab iste ducimus illo mollitia.</p>
                     <img class="img-medium pt-3" src="{% static 'sweeticons/024-macaron.png' %}" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 text-center pt-5">
+                <p class="pt-3">Laudantium vitae in! Sit consectetur at vel dolorem sed, cupiditate amet architecto vitae praesentium! Dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum quae ut, suscipit ea voluptas labore vero necessitatibus qui eos fugiat consequuntur animi.</p>
+                <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button class="btn btn-lg build-btn">Shop Now</button>
             </div>
         </div>
     </div>
