Added footer section in base.html and styled with css

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-12">
                 <h4 class="text-center font-weight-light py-3">Pick 'N' Mix</h4>
-                <a class="btn btn-lg build-btn" href="">Build</a>
+                <a class="btn btn-lg pink-btn" href="">Build</a>
             </div>
         </div>
         <div class="row">
@@ -74,7 +74,7 @@
             <div class="col-12 text-center pt-5">
                 <p class="pt-3">Laudantium vitae in! Sit consectetur at vel dolorem sed, cupiditate amet architecto vitae praesentium! Dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum quae ut, suscipit ea voluptas labore vero necessitatibus qui eos fugiat consequuntur animi.</p>
                 <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <button class="btn btn-lg build-btn">Shop Now</button>
+                <button class="btn btn-lg pink-btn">Shop Now</button>
             </div>
         </div>
     </div>
