--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,36 @@ body {
     font-family: 'Comfortaa', cursive;
 }
 
+.container-padding {
+    padding: 10% 15%;
+}
+
+.view-height-100 {
+    height: 100vh;
+}
+
+.cabinsketch-header {
+    font-family: 'Cabin Sketch', cursive;
+}
+
+/* Buttons */
+
+.pink-btn {
+    background-color: #e5b4ff;
+    color: #fff;
+}
+
+.pink-btn:hover {
+    color: #4d4c7d;
+    transform: scale(1.12);
+}
+
+/* Font-sizing */
+
+.small-font {
+    font-size: 0.6rem;
+}
+
 .medium-font {
     font-size: 3.5rem;
 }
@@ -20,39 +50,55 @@ body {
     }
 }
 
-.cabinsketch-header {
-    font-family: 'Cabin Sketch', cursive;
-}
+/* Background colours */
 
-.view-height-100 {
-    height: 100vh;
-}
-
-.container-padding {
-    padding: 10% 15%;
-}
-
-.bg-color-purple {
-    background-color: #c0b4ff;
+.bg-color-purplenavy {
+    background-color: #4d4c7d;
 }
 
 .bg-color-almond {
     background-color: #FFEECE;
 }
 
-.bg-color-lightblue {
-    background-color: #EBF1FF;
+/* Footer styling */
+
+.footer-padding {
+    padding: 5% 10% 1%;
 }
 
-.build-btn {
-    background-color: #e5b4ff;
-    color: #fff;
+.footer-headers {
+    color: #ffffff;
+    font-size: 1.2rem;
 }
 
-.build-btn:hover {
-    color: #fff;
-    transform: scale(1.12);
+.footer-link-positioning {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
 }
+
+.footer-links-style {
+    color: #ffffff;
+    font-size: 0.9rem;
+}
+
+.footer-links-style:hover {
+    color: #FFC0B4;
+    text-decoration: none;
+}
+
+
+.social-icons {
+    color: #ffffff;
+    font-size: 1.5rem;
+}
+
+.social-icons:hover {
+    color: #FFC0B4;
+    transform: scale(1.08);
+}
+
+/* Images */
 
 .img-small {
     height: auto;
