initial form structure in place in scoops.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,13 +6,13 @@
     <div class="container-fluid view-height-100 container-padding text-center mt-5 mt-lg-0">
         <div class="row pt-5 pt-lg-0">
             <div class="col-lg-3 d-none d-lg-block">
-                <img class="img-medium" src="{% static 'sweeticons/045-gummy.png' %}" alt="">
+                <img class="img-medium" src="{% static 'sweeticons/045-gummy.png' %}" alt="Smiley gummy midget gems">
             </div>
             <div class="col-lg-6 col-md-12">
                 <h1 class="cabinsketch-header pt-5 pb-2 big-font">Yommies</h1>
             </div>
             <div class="col-lg-3 d-none d-lg-block">
-                <img class="img-medium" src="{% static 'sweeticons/036-jellybeans.png' %}" alt="">
+                <img class="img-medium" src="{% static 'sweeticons/036-jellybeans.png' %}" alt="Smiley jelly beans">
             </div>
         </div>
         <div class="row">
@@ -23,10 +23,10 @@
         </div>
         <div class="row">
             <div class="col-6">
-                <img class="img-medium pt-4" src="{% static 'sweeticons/008-candy.png' %}" alt="">
+                <img class="img-medium pt-4" src="{% static 'sweeticons/008-candy.png' %}" alt="Smiley candy in striped wrapper">
             </div>
             <div class="col-6">
-                <img class="img-medium pt-4" src="{% static 'sweeticons/049-lollipop.png' %}" alt="">
+                <img class="img-medium pt-4" src="{% static 'sweeticons/049-lollipop.png' %}" alt="Smiley striped lollipop">
             </div>
         </div>
     </div>
@@ -42,7 +42,7 @@
         </div>
         <div class="row py-5">
             <div class="col-5">
-                <img class="img-medium" src="{% static 'sweeticons/020-marshmallow.png' %}" alt="">
+                <img class="img-medium" src="{% static 'sweeticons/020-marshmallow.png' %}" alt="Smiley striped marshmallow">
             </div>
             <div class="col-7">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia placeat fugit suscipit delectus quasi, ex perspiciatis fugiat voluptas ipsum quidem quaerat fuga consequuntur, neque pariatur soluta dolor magni. Modi, quae.</p>
@@ -53,21 +53,21 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia placeat fugit suscipit delectus quasi, ex perspiciatis fugiat voluptas ipsum quidem quaerat fuga consequuntur, neque pariatur soluta dolor magni. Modi, quae.</p>
             </div>
             <div class="col-5">
-                <img class="img-medium float-right" src="{% static 'sweeticons/048-breadroll.png' %}" alt="">
+                <img class="img-medium float-right" src="{% static 'sweeticons/048-gooeycandy.png' %}" alt="Smiley gooey candy">
             </div>
         </div>
         <div class="row py-5">
             <div class="col-sm-4 text-center py-3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sequi provident ab iste ducimus illo mollitia.</p>
-                    <img class="img-medium pt-3" src="{% static 'sweeticons/019-chocbar.png' %}" alt="">
+                    <img class="img-medium pt-3" src="{% static 'sweeticons/019-chocbar.png' %}" alt="Smiley chocolate bar">
             </div>
             <div class="col-sm-4 text-center py-3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sequi provident ab iste ducimus illo mollitia.</p>
-                    <img class="img-medium pt-3" src="{% static 'sweeticons/017-lollipop.png' %}" alt="">
+                    <img class="img-medium pt-3" src="{% static 'sweeticons/017-lollipop.png' %}" alt="Smiley pink lolliopo">
             </div>
             <div class="col-sm-4 text-center py-3">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sequi provident ab iste ducimus illo mollitia.</p>
-                    <img class="img-medium pt-3" src="{% static 'sweeticons/024-macaron.png' %}" alt="">
+                    <img class="img-medium pt-3" src="{% static 'sweeticons/024-macaron.png' %}" alt="Smiley purple macaron">
             </div>
         </div>
         <div class="row">
