--- a/static/css/base.css
+++ b/static/css/base.css
@@ -110,6 +110,15 @@ body {
     width: 50%;
 }
 
+.img-big {
+    height: auto;
+    width: 75%;
+}
+
+.border-radius-curve {
+    border-radius: 1rem;
+}
+
 /*  
     Bootstrap navbar colors initiallly generated from TWBSColor https://work.smarchal.com/twbscolor/ 
     then further customized
