--- a/sweets/templates/scoops/scoops.html
+++ b/sweets/templates/scoops/scoops.html
@@ -2,10 +2,70 @@
 {% load static %}
 
 {% block content %}
-    <div class="container-fluid">
+    <div class="container-fluid container-padding">
         <div class="row">
-            <div class="col-12 container-padding">
-                {{ scoops }}
+            <div class="col-12">
+                <h1 class="text-center pb-5">Yommies 1KG Custom Mix</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 text-center">
+                <img class="img-big border-radius-curve" src="{% static 'images/yommiesbag.jpg' %}" alt="Bag of yommies pick 'n' mix">
+            </div>
+            <div class="col-md-6">
+                <form>
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" name="scoop1" required>
+                            <option value="">Scoop 1</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" name="scoop2" required>
+                            <option value="">Scoop 2</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" name="scoop3" required>
+                            <option value="">Scoop 3</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" name="scoop4" required>
+                            <option value="">Scoop 4</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" name="scoop5" required>
+                            <option value="">Scoop 5</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" name="scoop6" required>
+                            <option value="">Scoop 6</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" name="scoop7" required>
+                            <option value="">Scoop 7</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" name="scoop8" required>
+                            <option value="">Scoop 8</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" name="scoop9" required>
+                            <option value="">Scoop 9</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control form-control-lg" name="scoop10" required>
+                            <option value="">Scoop 10</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Add to cart</button>
+                </form>
             </div>
         </div>
     </div>
