scoop options added with template forloop

--- a/sweets/templates/scoops/scoops.html
+++ b/sweets/templates/scoops/scoops.html
@@ -17,51 +17,81 @@
                     <div class="form-group">
                         <select class="form-control form-control-lg" name="scoop1" required>
                             <option value="">Scoop 1</option>
+                            {% for scoop in scoops %}
+                                <option value="{{ scoop.name }}">{{ scoop.name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
                         <select class="form-control form-control-lg" name="scoop2" required>
                             <option value="">Scoop 2</option>
+                            {% for scoop in scoops %}
+                                <option value="{{ scoop.name }}">{{ scoop.name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
                         <select class="form-control form-control-lg" name="scoop3" required>
                             <option value="">Scoop 3</option>
+                            {% for scoop in scoops %}
+                                <option value="{{ scoop.name }}">{{ scoop.name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
                         <select class="form-control form-control-lg" name="scoop4" required>
                             <option value="">Scoop 4</option>
+                            {% for scoop in scoops %}
+                                <option value="{{ scoop.name }}">{{ scoop.name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
                         <select class="form-control form-control-lg" name="scoop5" required>
                             <option value="">Scoop 5</option>
+                            {% for scoop in scoops %}
+                                <option value="{{ scoop.name }}">{{ scoop.name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
                         <select class="form-control form-control-lg" name="scoop6" required>
                             <option value="">Scoop 6</option>
+                            {% for scoop in scoops %}
+                                <option value="{{ scoop.name }}">{{ scoop.name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
                         <select class="form-control form-control-lg" name="scoop7" required>
                             <option value="">Scoop 7</option>
+                            {% for scoop in scoops %}
+                                <option value="{{ scoop.name }}">{{ scoop.name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
                         <select class="form-control form-control-lg" name="scoop8" required>
                             <option value="">Scoop 8</option>
+                            {% for scoop in scoops %}
+                                <option value="{{ scoop.name }}">{{ scoop.name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
                         <select class="form-control form-control-lg" name="scoop9" required>
                             <option value="">Scoop 9</option>
+                            {% for scoop in scoops %}
+                                <option value="{{ scoop.name }}">{{ scoop.name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
                         <select class="form-control form-control-lg" name="scoop10" required>
                             <option value="">Scoop 10</option>
+                            {% for scoop in scoops %}
+                                <option value="{{ scoop.name }}">{{ scoop.name }}</option>
+                            {% endfor %}
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary">Add to cart</button>
