--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
     {% block core_css %}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
     {% endblock %}
 
     {% block extra_css %}
