Added bags.html and wired up with views and urls

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -74,7 +74,7 @@
             <div class="col-12 text-center pt-5">
                 <p class="pt-3">Laudantium vitae in! Sit consectetur at vel dolorem sed, cupiditate amet architecto vitae praesentium! Dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum quae ut, suscipit ea voluptas labore vero necessitatibus qui eos fugiat consequuntur animi.</p>
                 <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <button class="btn btn-lg pink-btn">Shop Now</button>
+                <a class="btn btn-lg pink-btn" href="{% url 'bags' %}">Shop now</a>
             </div>
         </div>
     </div>
