Added quantity selection to bags.html and js to support this

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,8 +6,8 @@ body {
     font-family: 'Comfortaa', cursive;
 }
 
-.text-baby-blue {
-    color: #B4CEFF!important;
+.text-purple {
+    color: #4d4c7d!important;
 }
 
 .container-padding {
