--- a/sweets/templates/sweets/bags.html
+++ b/sweets/templates/sweets/bags.html
@@ -26,8 +26,19 @@
                         </div>
                     </div>
                     <div class="form-group py-3">
-                        <label for="quantity" class="d-inline">Quantity</label>
-                        <input class="d-inline form-control w-25" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ bag.id }}" id="id_qty_{{ bag.id }}">
+                        <div class="input-group w-50">
+                            <div class="input-group-prepend">
+                                <button class="decrement-qty btn text-purple" data-item_id="1" id="decrement-qty">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                            </div>
+                            <input class="d-inline form-control w-25 qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="2" id="id_qty">
+                            <div class="input-group-append">
+                                <button class="increment-qty btn text-purple" data-item_id="3" id="increment-qty">
+                                    <i class="fas fa-plus"></i>
+                                </button>
+                            </div>
+                        </div>
                     </div>
                     <button type="submit" class="btn btn-primary mr-sm-2 my-">Add to cart</button>
                     <button type="submit" class="btn btn-warning mx-sm-2 my-1">Checkout</button>
@@ -47,4 +58,9 @@
         });
         
     </script> -->
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'sweets/includes/quantity_input_script.html' %}
 {% endblock %}
