--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,6 +22,15 @@ body {
     font-family: 'Cabin Sketch', cursive;
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.cursor-pointer:hover {
+    text-decoration: none;
+    transform: scale(1.11);
+}
+
 .stripe-icon {
     font-size: 2.6rem;
     vertical-align: bottom;
@@ -31,11 +40,17 @@ body {
 
 .pink-btn {
     background-color: #e5b4ff;
-    color: #fff;
+    color: #4d4c7d;
 }
 
-.pink-btn:hover {
+.purple-btn {
+    background-color: #c0b4ff;
     color: #4d4c7d;
+}
+
+.pink-btn:hover,
+.purple-btn:hover {
+    color: #fff;
     transform: scale(1.12);
 }
 
