Added messages to adjust and remove quantity functions

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -85,7 +85,7 @@
                     <p class="mt-5">Your cart is empty!</p>
                     <p class="my-5">Get building your own pick 'N' mix or choose a ready made bag.</p>
                     <a href="{% url 'scoops' %}" class="btn btn-lg pink-btn mx-3">Build</a>
-                    <a href="{% url 'bags' %}" class="btn btn-lg pink-btn mx-3">Bags</a>
+                    <a href="{% url 'bags' %}" class="btn btn-lg purple-btn mx-3">Bags</a>
                 {% endif %}
             </div>
         </div>
