Added cart preview to success toast and adjusted button styling

--- a/sweets/templates/sweets/bags.html
+++ b/sweets/templates/sweets/bags.html
@@ -40,8 +40,8 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary mr-sm-2 my-">Add to cart</button>
-                    <button type="submit" class="btn btn-warning mx-sm-2 my-1">Checkout</button>
+                    <button type="submit" class="btn purple-btn mr-sm-2 my-1 font-weight-bold">Add to cart</button>
+                    <button type="submit" class="btn pink-btn mx-sm-2 my-1 font-weight-bold">Checkout</button>
                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     <div class="d-inline mx-sm-2 pt-1"><i class="fab fa-cc-stripe stripe-icon"></i></div>
                     <small class="text-center d-block pt-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam amet fugiat nam, harum soluta eveniet voluptatibus omnis quas mollitia eaque blanditiis quasi! Nostrum repellat quia iusto tempora neque amet ex.</small>
