--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,7 +51,7 @@ body {
 .pink-btn:hover,
 .purple-btn:hover {
     color: #fff;
-    transform: scale(1.12);
+    transform: scale(1.05);
 }
 
 /* Font-sizing */
@@ -163,6 +163,36 @@ body {
     top: 55px;
     right: 1px;
     z-index: 9999999999;
+}
+
+.cart-notification-wrapper {
+    height: 100px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+::-webkit-scrollbar {
+    width: 0.8rem;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: 0 0 1rem 0.2 #666;
+    -webkit-box-shadow: inset 0 0 6px #666;
+    border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 1rem;
+    box-shadow: 0 0 1rem 0.2 #666;
+    -webkit-box-shadow: inset 0 0 6px #666;
+}
+
+::-webkit-scrollbar-corner {
+    border-radius: 1rem;
+}
+
+::-webkit-resizer {
+    border-radius: 2rem;
 }
 
 /*  
