--- a/sweets/templates/sweets/scoops.html
+++ b/sweets/templates/sweets/scoops.html
@@ -128,8 +128,8 @@
                         <label for="quantity" class="d-inline">Quantity</label>
                         <input class="d-inline form-control w-25" type="number" name="quantity" min="1" max="99" placeholder="1">
                     </div>
-                    <button type="submit" class="btn btn-primary mr-sm-2 my-">Add to cart</button>
-                    <button type="submit" class="btn btn-warning mx-sm-2 my-1">Checkout</button>
+                    <button type="submit" class="btn purple-btn mr-sm-2 my-1 font-weight-bold">Add to cart</button>
+                    <button type="submit" class="btn pink-btn mx-sm-2 my-1 font-weight-bold">Checkout</button>
                     <div class="d-inline mx-sm-2 pt-1"><i class="fab fa-cc-stripe stripe-icon"></i></div>
                     <small class="text-center d-block pt-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam amet fugiat nam, harum soluta eveniet voluptatibus omnis quas mollitia eaque blanditiis quasi! Nostrum repellat quia iusto tempora neque amet ex.</small>
                 </form>
