--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,11 +1,36 @@
 <div class="toast" role="alert" data-autohide="false">
   <div class="toast-header bg-color-peach">
-    <h5 class="mr-auto pt-1 text-purple">Success!</h5>
-    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+    <h5 class="mr-auto pt-2 text-purple">Success!</h5>
+    <button type="button" class="ml-2 close" data-dismiss="toast" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="toast-body bg-color-almond">
-    {{ message }}
+      <div class="row">
+          <div class="col">
+            {{ message }}
+          </div>
+      </div>
+      {% if grand_total %}
+        <p class="pt-4">Your cart: <strong>{{ item_count }} item(s)</strong></p>
+        <div class="cart-notification-wrapper">
+            {% for item in cart_items %}
+                <div class="row">
+                    <div class="col">
+                        <p>{{ item.item.name }} <strong>x{{ item.quantity }}</strong></p>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <div class="row">
+            <div class="col">
+                <p>Total<strong>{% if free_delivery_delta > 0 %}</strong> (Exc. delivery){% endif %}:<strong> £{{ total|floatformat:2 }}</strong></p>
+                {% if free_delivery_delta > 0 %}
+                    <p>Spend £{{ free_delivery_delta }} more to get free next day delivery!</p>
+                {% endif %}
+                <a href="{% url 'view_cart' %}" class="btn pink-btn font-weight-bold">Go to checkout</a>
+            </div>
+        </div>
+        {% endif %}
   </div>
 </div>
